Map point-click details redesign.
